--- a/index/index.html
+++ b/index/index.html
@@ -7,9 +7,9 @@
   <body>
     <div class="stage">
       <img src="" alt="ballet-stage" class="stage-photo" />
-      <br />
+      <br/>
       <button id="start-button">Showtime</button>
-      <p>Use the up and down arrows to choose the right answer!</p>
+      <p>Use the up and down arrows to choose the right answer</p>
       <img src="" alt="" class="arrows-img" />
     </div>
 
