creating deploy page

--- a/index/index.html
+++ b/index/index.html
@@ -9,7 +9,7 @@
       <img src="" alt="ballet-stage" class="stage-photo" />
       <br/>
       <button id="start-button">Showtime</button>
-      <p>Use the up and down arrows to choose the right answer</p>
+      <p>Use the up and down arrows to choose the right answer!</p>
       <img src="" alt="" class="arrows-img" />
     </div>
 
