--- a/index/index.html
+++ b/index/index.html
@@ -6,11 +6,12 @@
   </head>
   <body>
     <div class="stage">
-      <img src="" alt="ballet-stage" class="stage-photo" />
+        <h1>Tina Ballerina</h1>
+      <img src="images/Stage.jpg" alt="" class="stage-photo" />
       <br/>
       <button id="start-button">Showtime</button>
-      <p>Use the up and down arrows to choose the right answer!</p>
-      <img src="" alt="" class="arrows-img" />
+      <p>Use the up and down arrows to choose the right answer and move our dancer!</p>
+      <img src="images/Tiny Dancer.jpg" alt="" class="arrows-img" />
     </div>
 
     <div id="downstage-right">
