--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tina Ballerina</title>
     <script src="./scripts/script.js"></script>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    
+    <div id="question" class="not-visible">
+        <h2>pergunta</h2>
+        <ul>
+            <li>op 1</li>
+            <li>op 2</li>
+            <li>op 3</li>
+            <li>op 4</li>
+        </ul> 
+    </div>
 </body>
 </html>
