images added but need drawing to happen and start button to work

--- a/index.html
+++ b/index.html
@@ -9,6 +9,31 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
+    <nav class="nav-bar">
+        <ul class="nav-bar-ul nav-bar-ul-li">
+            <li>
+                <a href="#tina">What Tina Wants</a>
+            </li>
+            <li>
+                <a href="#game">How to Play</a>
+            </li>
+        </ul>
+    </nav>
+    <header class="header">
+        <h1>Tina Ballerina
+            <img src="images/Tina.png" class="not-visible canvas-ballerina">
+        </h1>
+        <h2>She Loves Ballet</h2>
+    </header>
+    <section id="tina" class="light-box">
+        <article class="container">
+        </article>
+    </section>
+    <section id="game">
+            <h3>Showtime!</h3>
+            <p class="text" "start-text">Help Tina cross the stage gracefully!Use the arrows to move, and beware the rest of the company trying to stop her.</p>
+            <button href="#" class="start-btn">Places, please!</a>
+    </section>
     <div id="question" class="not-visible">
         <h2>pergunta</h2>
         <ul>
@@ -16,6 +41,9 @@
             <li>op 2</li>
             <li>op 3</li>
         </ul> 
+    </div>
+    <div id="nottinas" class="obstacles not-visible">
+        <img src="images/NotTina.gif">
     </div>
 </body>
 </html>
