--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tina Ballerina</title>
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/script.js" defer></script>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
@@ -21,18 +21,17 @@
     </nav>
     <header class="header">
         <h1>Tina Ballerina
-            <img src="images/Tina.png" class="not-visible canvas-ballerina">
+            <img src="images/Tina.png" class="canvas-ballerina">
         </h1>
-        <h2>She Loves Ballet</h2>
+        <h3>Tina wants to dance!</h3>
     </header>
     <section id="tina" class="light-box">
         <article class="container">
         </article>
     </section>
     <section id="game">
-            <h3>Showtime!</h3>
-            <p class="text" "start-text">Help Tina cross the stage gracefully!Use the arrows to move, and beware the rest of the company trying to stop her.</p>
-            <button href="#" class="start-btn">Places, please!</a>
+            <h2 class="text" "start-text">Help Tina cross the stage gracefully!Use the arrows to move, and beware the rest of the company trying to stop her.</h2>
+            <button class="start-btn">Places, please!</button>
     </section>
     <div id="question" class="not-visible">
         <h2>pergunta</h2>
@@ -43,7 +42,7 @@
         </ul> 
     </div>
     <div id="nottinas" class="obstacles not-visible">
-        <img src="images/NotTina.gif">
+        <img src="images/NotTina.jpg">
     </div>
 </body>
 </html>
