changes made to css and game functions

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </article>
     </section>
     <section id="game">
-            <h2 class="text" "start-text">Help Tina cross the stage gracefully!Use the arrows to move, and beware the rest of the company trying to stop her.</h2>
-            <button class="start-btn">Places, please!</button>
+            <h2 class="text" "start-text">Help Tina cross the stage gracefully! <br>Use the arrows to move, and beware the rest of the company trying to stop her.</h2>
+            <button class="start-btn">Showtime!</button>
     </section>
     <div id="question" class="not-visible">
         <h2>pergunta</h2>
