finished with new tab opening when the game starts

--- a/game.html
+++ b/game.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tina Ballerina Stage</title>
-    <script src="./scripts/script.js" defer></script>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
-<body>
-    <a id="game-stage" href="./index.html" target="_blank">Tina Ballerina Stage</a>
+<body id="game-stage">
+    <a href="./index.html" target="_blank">Tina Ballerina Stage</a>
+    <div id="question" class="not-visible">
+        <h2>pergunta</h2>
+        <ul>
+            <li>op 1</li>
+            <li>op 2</li>
+            <li>op 3</li>
+        </ul> 
+    </div>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
