--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tina Ballerina</title>
-    <script src="./scripts/script.js" defer></script>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
@@ -31,7 +30,9 @@
     </section>
     <section id="game">
             <h2 class="text" "start-text">Help Tina cross the stage gracefully! <br>Use the arrows to move, and beware the rest of the company trying to stop her.</h2>
-            <button class="start-btn">Showtime!</button>
+            <button class="start-btn">
+            <a href="game.html">Showtime!</a>
+        </button>
     </section>
     <div id="question" class="not-visible">
         <h2>pergunta</h2>
