the final version, we say

--- a/game.html
+++ b/game.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body id="game-stage">
-    <a href="./index.html" target="_blank">Tina Ballerina Stage</a>
+    <a class="start-btn-2" href="./index.html" target="_blank">Try Again</a>
     <div id="question" class="not-visible">
         <h2>pergunta</h2>
         <ul>
