--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./styles/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tina Ballerina</title>
-    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <nav class="nav-bar">
@@ -29,9 +29,9 @@
         </article>
     </section>
     <section id="game">
-            <h2 class="text" "start-text">Help Tina cross the stage gracefully! <br>Use the arrows to move, and beware the rest of the company trying to stop her.</h2>
-            <button class="start-btn">
-            <a href="game.html">Showtime!</a>
+            <h2 class="text start-text">Help Tina cross the stage gracefully! <br>Use the arrows to move, and beware the rest of the company trying to stop her.</h2>
+            <button>
+                <a class="start-btn" href="game.html">Showtime!</a>
         </button>
     </section>
     <div id="question" class="not-visible">
